@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2023-09-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-15T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -39,6 +34,11 @@
     },
     {
       "timestamp": "2023-09-26T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
