@@ -1,3 +1,12 @@
+2023-09-27T08:14:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6323208739 # 1198
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
+* notice: last 14d: unq all: 3 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 158 185 / 167 194
+* notice: next accum: outdated-unq outdated-all / unq all: 159 186 / 168 195
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-09-13] / [2023-09-27]
+
 2023-09-26T08:14:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6309914514 # 1195
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
